[package]
name = "co-planet-signaling-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["default", "ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
thiserror = { version = "2" }
cuid2 = "0.1"
futures-util="0.3"

tracing="0.1"
tracing-subscriber = "0.3.0"

rand ="0.9"
